removing unused imports and fixing indentation